Preparations for Java 11