@@ -112,7 +112,7 @@ public class NumberCellEditor extends DefaultCellEditor
 			}
 
 			// return an instance of column class
-			return new Float(n.floatValue());
+			return Float.valueOf(n.floatValue());
 
 		} catch (ParseException pex)
 		{
